--- a/ImageParse.csproj
+++ b/ImageParse.csproj
@@ -6,8 +6,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AngleSharp" Version="0.16.0" />
+    <PackageReference Include="AngleSharp.XPath" Version="1.1.7" />
     <PackageReference Include="Aspose.Words" Version="21.7.0" />
-    <PackageReference Include="Microsoft.Office.Interop.Word" Version="15.0.4797.1003" />
     <PackageReference Include="Selenium.Chrome.WebDriver" Version="85.0.0" />
     <PackageReference Include="Selenium.WebDriver" Version="4.0.0-beta4" />
   </ItemGroup>
